# HGQ

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  faq.md  pyproject.toml  requirements.txt  usage_guide.md
.github/workflows/: python-publish.yml  sphinx-build.yml
docs/: Makefile  conf.py  faq.md  getting_started.md  index.rst  install.md  qkeras.md  reference.md  status.md  tips.md
docs/_static/: custom.css
examples/: mnist.ipynb  qkeras.ipynb
src/FHQ/: __init__.py  hls4ml_hook.py  hls4ml_prj_patch.py  quantizer.py  replica.py  utils.py
src/FHQ/layers/: __init__.py  base.py  conv.py  dense.py  misc.py  passive_layers.py
src/HGQ/: __init__.py  _patch.py  bops.py  hls4ml_hook.py  hls4ml_prj_patch.py  nn_utils.py  quantizer.py  replica.py  utils.py
src/HGQ/bops/: __init__.py  bops.py
src/HGQ/experimental/: quantizer.py
src/HGQ/layers/: __init__.py  base.py  batchnorm_base.py  conv.py  dense.py  misc.py  passive_layers.py
src/HGQ/layers/experimental/: attn.py
src/HGQ/proxy/: __init__.py  convert.py  fixed_point_quantizer.py  model.py  precision_derivation.py  unary_lut.py
src/HGQ/proxy/plugins/: __init__.py  qkeras.py
src/HGQ/quantizer/: __init__.py  quantizer.py
src/HGQ/surrogate/: __init__.py  feature.py  inference.py  resource_map.py
src/HGQ/utils/: __init__.py  utils.py
test/: helpers.py  pytest.ini  test_convert_manual_proxy.py  test_end2end_tiny.py  test_hgq_combined.py  test_hgq_combined_huge.py  test_hgq_hlayers.py  test_hgq_players.py  test_syn_hlayers.py  test_syn_large.py  test_syn_players.py  test_syn_qkeras.py  test_syn_small.py
tests/: test_hgq_api.py
