[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]

build-backend = "setuptools.build_meta"

[project]
name = "HGQ"
version = "0.2.0-rc1"
authors = [{ name = "Chang Sun", email = "chsun@cern.ch" }]
description = "High Granularity Quantizarion for hls4ml"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
]

[project.urls]
repository = "https://github.com/calad0i/HGQ"

[tool.setuptools_scm]
write_to = "src/HGQ/_version.py"
