[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]

build-backend = "setuptools.build_meta"

[project]
name = "HGQ"
version = "0.2.5"
authors = [{ name = "Chang Sun", email = "chsun@cern.ch" }]
description = "High Granularity Quantizarion"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 5 - Production/Stable",
]

dependencies = ['tensorflow>=2.13', 'numpy>=1.23', 'keras<3']

[project.urls]
repository = "https://github.com/calad0i/HGQ"

[tool.setuptools_scm]
write_to = "src/HGQ/_version.py"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "qkeras", "pyparsing"]

test = [
  "hls4ml>=1.0",
  "qkeras",
  "pytest",
  "pytest-xdist",
  "pytest-env",
  "pytest-cov",
  "pytest-sugar",
  "pyparsing",
]
